--- a/src/styles.css
+++ b/src/styles.css
@@ -516,6 +516,9 @@ video {
 } .my-20 {
   margin-top: 5rem;
   margin-bottom: 5rem;
+} .mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 } .mx-\[7px\] {
   margin-left: 7px;
   margin-right: 7px;
@@ -541,8 +544,6 @@ video {
   height: 320px;
 } .h-10 {
   height: 2.5rem;
-} .max-h-20 {
-  max-height: 5rem;
 } .w-full {
   width: 100%;
 } .w-fit {
@@ -553,6 +554,8 @@ video {
   max-width: 1100px;
 } .max-w-\[350px\] {
   max-width: 350px;
+} .max-w-\[194px\] {
+  max-width: 194px;
 } .max-w-\[500px\] {
   max-width: 500px;
 } .flex-1 {
@@ -695,6 +698,10 @@ video {
 
   .md\:h-\[576px\] {
     height: 576px;
+  }
+
+  .md\:max-w-full {
+    max-width: 100%;
   }
 
   .md\:text-3xl {
