--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
 	font-family: 'Poppins', sans-serif;
 	background: #e6e9ff;;
 	margin: 20px;
+	transition: background 0.2s linear;
 }
 
 
@@ -28,4 +29,97 @@ a {
 	.chat-sidebar {
 		display: none;
 	}
+}
+
+
+
+body.dark {
+	background-color: #292c35;
+}
+
+.index-header.dark  {
+	background-color: #bcbce9;
+}
+.index-body.dark  {
+	background-color: #878de2;
+}
+
+.index-header-title.dark {
+	color: black;
+}
+.index-label.dark {
+	color: black;
+}
+.chat-header.dark  {
+	background-color: #878de2;
+
+};
+
+
+/* .chat-header.dark input {
+
+} */
+
+.checkbox {
+	opacity: 0;
+	position: absolute;
+}
+.checkbox::after {
+	display: none;
+}
+  
+.label {
+	width: 50px;
+	height: 26px;
+	background-color:#111;
+	display: flex;
+	border-radius:50px;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	transform: scale(1.5);
+}
+  
+.ball {
+	width: 20px;
+	height: 20px;
+	background-color: white;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	border-radius: 50%;
+	transition: transform 0.2s linear;
+}
+  
+  /*  target the elemenent after the label*/
+  .checkbox:checked + .label .ball{
+	transform: translateX(24px);
+  }
+  
+  .fa-moon {
+	color: pink;
+  }
+  
+  .fa-sun {
+	color: yellow;
+  }
+
+.chaters.dark {
+	background-color: #bcbce9;
+}
+.chatbar-text.dark {
+	color: black
+}
+.chatbar-text {
+	color: #ff9376;
+}
+
+.chat-send-btn.dark {
+	color: black;
+}
+
+.chat-header-text.dark  {
+	color: black;
+
 }
