--- a/src/styles.css
+++ b/src/styles.css
@@ -507,6 +507,14 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+} .absolute {
+  position: absolute;
+} .relative {
+  position: relative;
+} .-top-14 {
+  top: -3.5rem;
+} .right-6 {
+  right: 1.5rem;
 } .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -519,6 +527,9 @@ video {
 } .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+} .my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 } .mx-\[7px\] {
   margin-left: 7px;
   margin-right: 7px;
@@ -528,8 +539,6 @@ video {
   margin-bottom: 1rem;
 } .mb-5 {
   margin-bottom: 1.25rem;
-} .mt-1 {
-  margin-top: 0.25rem;
 } .mt-\[6px\] {
   margin-top: 6px;
 } .mb-2 {
@@ -580,12 +589,12 @@ video {
 } .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-} .bg-blue-400 {
+} .bg-\[\#292c35\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-} .bg-blue-300 {
+  background-color: rgb(41 44 53 / var(--tw-bg-opacity));
+} .bg-\[\#5b5d62\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+  background-color: rgb(91 93 98 / var(--tw-bg-opacity));
 } .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -653,6 +662,9 @@ video {
 } .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+} .text-\[\#ff9376\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 147 118 / var(--tw-text-opacity));
 } .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -662,6 +674,9 @@ video {
 } .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+} .text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 } .opacity-70 {
   opacity: 0.7;
 } .filter {
